# Portal

./: README.md  __init__.py  gui.py  main.py  setup.py
core/: config.py  pipeline.py  result.py
extractor/: detector.py  extractor.py
launcher/cpp/: CMakeLists.txt  portablizer_shim.cpp
packager/: packager.py  reporter.py
patcher/: manifest.py  registry.py
sandbox/: differ.py  runner.py
tests/: test_portablizer.py
tools/: README.md  download_tools.py
ui/: console.py
